local-llm/archive/qwen2-05b/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: homelab-ai
    labels:
        name: homelab-ai
